[package]
name = "LIRKS"
version = "0.1.0"
edition = "2024"

[dependencies]
caps = "0.5.5"
chrono = "0.4.42"
clap = "4.5.47"
command-fds = "0.3.2"
dbus = "0.9.9"
indicatif = "0.18.0"
libc = "0.2.175"
nix = "0.30.1"
seccomp = "0.1.2"
tempfile = "3.22.0"
tokio = "1.47.1"
toml = "0.9.6"
walkdir = "2.5.0"
zbus = "5.11.0"
